<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/modalStyle">

    <ScrollView
        android:id="@+id/modalContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/inputLayoutStyle"
                android:id="@+id/nameLayout"
                android:imeOptions="actionNext"
                android:importantForAutofill="no">

                <EditText
                    style="@style/editTextStyle"
                    android:id="@+id/txtName"
                    android:hint="@string/inputName"
                    android:inputType="none"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/inputLayoutStyle"
                android:id="@+id/descriptionLayout"
                android:imeOptions="actionNext"
                android:importantForAutofill="no">

                <EditText
                    style="@style/editTextStyle"
                    android:id="@+id/txtDescription"
                    android:hint="@string/inputDescription"
                    android:inputType="none"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/inputLayoutStyle"
                android:id="@+id/priceLayout"
                android:imeOptions="actionNext"
                android:importantForAutofill="no">

                <EditText
                    style="@style/editTextStyle"
                    android:id="@+id/txtPrice"
                    android:hint="@string/inputPrice"
                    android:inputType="numberDecimal"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/inputLayoutStyle"
                android:id="@+id/stockLayout"
                android:imeOptions="actionNext"
                android:importantForAutofill="no">

                <EditText
                    style="@style/editTextStyle"
                    android:id="@+id/txtStock"
                    android:hint="@string/inputStock"
                    android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:animateLayoutChanges="true">

                <com.google.android.material.button.MaterialButton
                    style="@style/PrimaryButton"
                    android:id="@+id/btnAction"
                    android:text="@string/postButton"/>

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_gravity="center"
                    android:visibility="invisible"/>

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:animateLayoutChanges="true">

                <com.google.android.material.button.MaterialButton
                    style="@style/SecondaryButtonShape"
                    android:id="@+id/btnBack"
                    android:text="@string/backButton"/>

            </FrameLayout>
        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/modalLoading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone">
        <ProgressBar
            android:id="@+id/progressBarModal"
            android:layout_width="@dimen/_55sdp"
            android:layout_height="@dimen/_55sdp"/>

        <TextView
            android:id="@+id/txtModalMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:textSize="@dimen/_17ssp"
            android:layout_marginTop="@dimen/_10sdp"/>
    </LinearLayout>

</RelativeLayout>